--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,14 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web:900|Roboto:400,100);
 
-body { background-color: #fff; width:100%; }
+body { background-color: #fff; width:100%;}
 
 .visibilityhide{
 	visibility:hidden;
 }
 
 #mathQuiz {
-	font-family: 'Roboto', sans-serif; font-size: 16px; font-weight: 400; height: 1500px; 
-	position: relative;	overflow: hidden;;	color: #000;background-size:100%;
+	font-family: 'Roboto', sans-serif; font-size: 16px; font-weight: 400; height: 90vh; 
+	position: relative;	overflow-x: hidden;	color: #000;background-size:100%;
 	/*background:#fff url(/background_logo.png) no-repeat 0px 0px;*/
 }
 
@@ -44,9 +44,12 @@ body { background-color: #fff; width:100%; }
 }
 #mathQuiz .startbtn {
 	display: inline-block; cursor: pointer; background-color: #960000;
-	color: #fff; text-decoration: none;font-size: 2em;
+	color: black; text-decoration: none;font-size: 2em;
 	padding: 15px 25px;
+	margin-bottom: 2px;
+	font-weight:bolder;
 }
+
 
 #mathQuiz .mastercode { 
 	display: inline-block;	font-size: 1em;	width: 80%;
@@ -62,15 +65,48 @@ body { background-color: #fff; width:100%; }
 	z-index:40;
 }
 
+.NOTHEREadjdivs {
+	width: fit-content;
+	margin-right:10px;
+	float: left;
+}
+
+#mathQuiz #continue {
+	background-color: #84c15a;
+}
+
+#mathQuiz #test {
+	background-color: #4da4d7;
+	/*padding: 7px 12px;
+	font-size: 1em;*/
+}
+
+#mathQuiz #skills {
+	background-color: #e7d640;
+}
+
+#mathQuiz .buttonsdiv {
+	margin-left: 3em;
+}
+
+#mathQuiz #welcome {
+	margin-bottom:1.5em;
+}
+
+#mathQuiz #logo {
+	margin-bottom:3em;
+}
+
 /* Exit Button*/
 #mathQuiz #exit {
     position: fixed;
     top: 10px;
-    right: 15px;
+    left: 10px;
+    width: 40px;
 }
 
 /* Progress Bar */
-#mathQuiz .progress {width: 550px; position: absolute;top:100px; left: 45px;}
+#mathQuiz .progress {width: fit-content; position: absolute;top:100px; left: 45px;}
 #mathQuiz .progress div {
 	position: relative;	display: inline-block; width: 30px; height: 30px; margin-right: 30px;
 	border-radius: 50%;	background-color: rgba(0, 0, 0, .2); transition: background-color 1s;
@@ -88,13 +124,13 @@ body { background-color: #fff; width:100%; }
 #mathQuiz .progress div.correct::after { top:-5px; opacity: 1}
 
 /* Intro */
-#mathQuiz .intro { position: absolute; top:180px; left:45px; width: 550px;}
-#mathQuiz .intro p { margin:0px 0px 40px 0px;}
+#mathQuiz .intro {top:180px; left:45px; width: 550px; padding-left: 20px; padding-top: 20px;}
+/*#mathQuiz .intro p { margin:0px 0px 40px 0px;}*/
 #mathQuiz .btn { background-color:#960000; }
 
 
 /* Questions */
-#mathQuiz .question { width: 550px; position: absolute; top:160px; left: 660px;}
+#mathQuiz .question { width: fit-content; position: absolute; top:90px; left: 660px;}
 #mathQuiz .question .txt { font-size: 1.4em; margin: 0px 0px 20px 0px; z-index:40;}
 #mathQuiz .question .question_image { position:center; width:90%; z-index:-1000;}
 #mathQuiz .question .inactive{display:none;}
@@ -109,6 +145,10 @@ body { background-color: #fff; width:100%; }
 #mathQuiz .question .keyans { 
 	display: inline-block; font-size: 1.1em; width: 225px;border: 2px solid rgba(238,189,102,.4); 
 	padding:10px; margin: 0px 15px 15px 0px; position: relative;
+}
+
+#mathQuiz #questionanswerbutton {
+	position: relative;
 }
 
 #mathQuiz .question .ans { 
@@ -136,6 +176,50 @@ body { background-color: #fff; width:100%; }
 #mathQuiz .question.unanswered .ans {cursor:pointer;}
 #mathQuiz .question.unanswered .ans:hover {background-color: rgba(238,189,102,0.2);}
 #mathQuiz .question.answered .ans {cursor:default;}
+
+/* Grid */
+.grid-container {
+	display: grid;
+	width: 100%;
+	grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+	height:457px;
+	overflow: auto;
+	scroll-snap-type: y mandatory;
+
+}
+.grid-item {
+ 	aspect-ratio: 1;
+ 	background-color: #717E8E;
+ 	color: white;
+	font-size: 90%;
+	text-align: center;
+	scroll-snap-align: start;
+	font-weight: bold;
+	position:relative;
+	padding-top: 10%;
+	border: 1px solid;
+}
+
+.grid-text {
+	padding-left:10%;
+	padding-right:10%;
+}
+
+.trackprogressbar {
+	border-bottom: 6px solid green;
+	width: 1%;
+	position: absolute;
+	top: 0px;
+	z-index: 1;
+}
+
+.trackprogressbarvoid {
+	border: 3px solid white;
+	width: 100%;
+	position: absolute;
+	top: 0px;
+	z-index: 0;
+}
 
 /* Feedback */
 #mathQuiz .feedback { 
@@ -214,4 +298,9 @@ body { background-color: #fff; width:100%; }
 	#mathQuiz .results a.btn {margin-bottom: 20px;}
 	#mathQuiz .active {left: 45px; width:80%;}
 	#mathQuiz .intro.inactive, #mathQuiz .inactive.answered {left: :-650px;}
+
+	#mathQuiz .grid-container {height:367px;}
+
 }
+
+/* start menu */
